infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
spec:
  rules:
    - host: makeit.com
      http:
        paths:
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 3000
          - path: /api/course/?(.*)
            pathType: Prefix
            backend:
              service:
                name: course-srv
                port:
                  number: 4000
          - path: /api/purchase/?(.*)
            pathType: Prefix
            backend:
              service:
                name: purchase-srv
                port:
                  number: 5000        
          - path: /api/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: purchase-srv
                port:
                  number: 5000
